Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-theme-switcher",
+  "name": "uhc-theme-switcher",
   "private": true,
   "version": "0.0.2",
   "type": "module",
